--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -19,8 +19,7 @@
         opacity:1;
     }
 }
-
-.app-mainpage {
+.app-main-page {
     h1 {
         animation: appear 0.9s 0.6s, cubic-bezier(0.25, 0.84, 0.44, 1);
         font-family: 'Roboto Condensed', sans-serif;
@@ -32,14 +31,23 @@
         font-size: 96px;
         font-weight: bold;
         text-transform: uppercase;
+        text-align:center;
+        margin-right: 50px;
     }
 
     h3 {
+        text-align:center;
         font-family: 'Roboto Condensed', sans-serif;
         margin: 10px 0px;
         color: $accentColor;
         font-weight: bold;
         font-size: 35px;
+    }
+}
+.app-mainpage {
+    app-mainpage-date {
+        margin:0px 24px;
+        font-size:39px;
     }
 
     p {
